argocd/base/resources/routes/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd-tls-route
  namespace: argocd
spec:
  hostnames:
    - argo.cluster.local
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: argocd-passthrough
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
