argocd/base/resources/routes/keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  hostnames:
    - auth.cluster.local
  parentRefs:
    - name: main-gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: keycloak
          port: 80
